fix a bug on mobile view

--- a/src/css/chairstore.css
+++ b/src/css/chairstore.css
@@ -47,7 +47,6 @@ body {
   font-weight: 400;
   line-height: 1.7;
   color: #3e3d3d;
-  min-width: 430px;
 }
 body::-webkit-scrollbar {
   display: none;
