--- a/src/css/scss/_base.scss
+++ b/src/css/scss/_base.scss
@@ -25,5 +25,5 @@ body{
   font-weight: 400;
   line-height: 1.7;
   color: #3e3d3d;
-  min-width: 430px;
+
 }
